css bug dataview overflow-x

--- a/ui/materialize/styles.less
+++ b/ui/materialize/styles.less
@@ -21,5 +21,5 @@ th.th-sortable {
 
 #dataview-data{
 	max-width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
